syntax = "proto3";

option go_package = ".;proto";

package proto;

service FeedService {
  rpc GetFeed(GetFeedRequest) returns (GetFeedResponse);
}

message FeedItem {
  string type = 1;
  uint64 created_at = 2;
  bytes content = 3;
}

message GetFeedRequest {
  int64 limit = 1;
  uint64 user_id = 2;
  optional uint64 cursor = 3;
}

message GetFeedResponse {
  repeated FeedItem items = 1;
}
